--- a/model_service/quarto/report.ipynb
+++ b/model_service/quarto/report.ipynb
@@ -82,8 +82,9 @@
     "# load variant and display image\n",
     "# dfVariant = pd.read_csv(\"data/variant.csv\")\n",
     "dfVariant = pd.read_csv(DATA_DIR / \"variant.csv\")\n",
-    "selected_variant = dfVariant.iloc[0]['variant']\n",
-    "FIG_DIR = Path.cwd() / \"data\" / \"fig\"\n",
+    "selected_variant = str(dfVariant.iloc[0]['variant']).strip().upper()\n",
+    "\n",
+    "FIG_DIR = Path(os.environ.get(\"QUARTO_FIG_DIR\", str(Path.cwd() / \"data\" / \"fig\")))\n",
     "image_path = FIG_DIR / f\"{selected_variant}variant.png\"\n",
     "\n",
     "# image_path = f\"data/fig/{selected_variant}variant.png\"\n",
